--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
-<BaseLayout title="About">
+<Layout title="About">
     <h1>About</h1>
     <p>簡単な自己紹介文をここに入れます。プロフィールやスキル、経歴など。</p>
-</BaseLayout>
+</Layout>
 
