--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -1,9 +1,9 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import Layout from "../layouts/Layout.astro";
 ---
 
-<BaseLayout title="Works">
+<Layout title="Works">
     <h1>Works</h1>
     <p>制作物の一覧をここに掲載します。</p>
-</BaseLayout>
+</Layout>
 
